# nyu-debate-modeling

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  all_debate_questions.txt  best_fit_plot.py  check_training.py  cli.sh  dpo_train_data_analysis.py  host_setup.sh  lambda_labs.sh  pyproject.toml  standard_experiment.schema.json  training_data.jsonl
bash_scripts/: colors.sh  hpc_setup.sh
data/: dataset.py  loader_utils.py  lojban_loader.py  quality_debates_loader.py  quality_loader.py
debate/: debate_round.py  debater.py  transcript.py
experiments/: experiment_loader.py  power_pair_scheduler.py  quotes_collector.py  results_collector.py
models/: llm_model.py  model.py  model_utils.py  openai_model.py
prompts/: parser.py
run_orchestrator/: adjust_dpo_training_data_preferences.py  adjust_question_index.py  debate_emptiness_analyzer.py  debate_lengths_analyzer.py  debate_stats_analyzer.py  experiment_orchestrator.schema.json  filter_dpo_training_data_preferences.py  graph_debate_identifiers.py  graph_generator.py  question_index_renumbering.py  run_experiments.py  trained_debaters.schema.json  transcript_model.py
runs/: 2025-07-09_16:06:44.230427_run.csv
schemas/: dpo_transcripts.schema.json
scripts/: config.yml  convert_raw_dataset_for_training.py  graph_from_transcripts.py  huggingface_downloader.py  run_debate.py  script_utils.py
sft_data/: 1.ipynb  2.ipynb  convert_to_judge_sft.py  converted_khan_only_debate.jsonl  converter_raw_debates.py  fill_story_text.py  filter_judge_out.py  format_human_data.py  format_khan_data.py  human_debate_for_judge.jsonl  khan_to_jsonl_for_debaters.py  khan_to_jsonl_for_judge.py  llm_debate_for_judge.jsonl  prepare_data_for_sft.py  prepare_judge_sft_human_data.py  prepare_judge_sft_llm_data.py  rebalance_judge_sft.py  tmp.ipynb  unicode_fix.py
simple_baseline/: locations.py
stats/: 2025-07-09_16:06:44.230427.json
task_relevant/: Debater_A_debater_answers.jsonl  Debater_B_debater_answers.jsonl  Lojban Wave Lessons_Single page - La Lojban.htm  Questions and Answers on Lojban.htm  background.txt  background_test.txt  cmavo_def.jsonl  cmevla_def.jsonl  converted_data  correct_answers.csv  data.csv  dataset_generator.py  debater_answers.jsonl  dictionary_examples_data.jsonl  experiment_prompt.ipynb  experimental_cmavo_def.jsonl  experimental_gismu_def.jsonl  experimenting_code  experimenting_code_refactored.py  fuivla_def.jsonl  gismu_def.jsonl  intro.txt  lojban_grammar_search  lojban_grammar_search.jsonl  lujvo_def.jsonl  original_validation_report_o3-2025-04-16.csv  prompt.txt  rafsi_def.jsonl  relevant_definitions.jsonl  requirements.txt  verified_quotes.txt  word_search.ipynb  word_search.py
train/: __init__.py  iterative_dpo_trainer.py  sft_trainer.py  train_utils.py
transcripts/: 2025-07-09_00:56:06.961156_0_0.json  2025-07-09_00:56:06.961156_0_1.json  2025-07-09_00:56:06.961156_0_2.json  2025-07-09_00:56:06.961156_0_3.json  2025-07-09_09:30:25.101959_0_0.json  2025-07-09_09:30:25.101959_1_0.json  2025-07-09_09:30:25.101959_2_0.json  2025-07-09_09:30:25.101959_3_0.json  2025-07-09_10:24:20.561161_0_0.json  2025-07-09_10:24:20.561161_10_0.json  2025-07-09_10:24:20.561161_11_0.json  2025-07-09_10:24:20.561161_12_0.json  2025-07-09_10:24:20.561161_13_0.json  2025-07-09_10:24:20.561161_14_0.json  2025-07-09_10:24:20.561161_15_0.json  2025-07-09_10:24:20.561161_16_0.json  2025-07-09_10:24:20.561161_17_0.json  2025-07-09_10:24:20.561161_18_0.json  2025-07-09_10:24:20.561161_19_0.json  (+317 more)
(+953 files in other folders)
