[project]
name = "nyu-debate-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.8.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anthropic==0.57.1",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "blis==1.2.1",
    "catalogue==2.0.10",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpathlib==0.21.1",
    "coloredlogs==15.0.1",
    "confection==0.1.5",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "cymem==2.0.11",
    "datasets==3.6.0",
    "deepspeed==0.15.1",
    "dill==0.3.8",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "einops==0.6.1",
    "filelock==3.18.0",
    "fonttools==4.58.5",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "fuzzysearch==0.8.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httpx==0.26.0",
    "huggingface-hub==0.34.4",
    "humanfriendly==10.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonschema>=4.24.0",
    "kiwisolver==1.4.8",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.7.1",
    "matplotlib-inline==0.1.6",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "multiprocess==0.70.16",
    "murmurhash==1.0.13",
    "networkx==3.5",
    "ninja==1.11.1",
    "numpy==1.26.4",
    "openai==1.51.0",
    "optimum==1.13.2",
    "packaging==25.0",
    "pandas==1.5.3",
    "peft==0.17.0",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "preshed==3.0.10",
    "propcache==0.3.2",
    "protobuf==4.24.3",
    "psutil==7.0.0",
    "py-cpuinfo==9.0.0",
    "pyarrow==20.0.0",
    "pydantic==2.6.0",
    "pydantic-core==2.16.1",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "pytz==2025.2",
    "pyyaml==6.0.1",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.10.1",
    "seaborn==0.13.2",
    "sentence-transformers==5.0",
    "sentencepiece==0.1.99",
    "sentry-sdk==2.32.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "shtab==1.7.2",
    "six==1.17.0",
    "smart-open==7.3.0.post1",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.1",
    "statsmodels>=0.14.5",
    "sympy==1.14.0",
    "thinc==8.3.4",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.55.2",
    "trl==0.10.1",
    "typeguard==4.4.4",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "tyro==0.9.26",
    "urllib3==2.5.0",
    "wandb==0.21.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]
[dependency-groups]
# the docker image will handle the installation of torch
# and flash-attn.
# flash-attn requires knowing runtime information about the
#
cuda = [
    "bitsandbytes==0.46.1",
    "torch==2.7.1", # 2.7.0.dev20250310+cu128
    "flash-attn==2.8.0.post2",
]
